@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(as.data.frame,csAnno)
+export(.)
 export(annotatePeak)
 export(as.GRanges)
 export(covplot)
@@ -23,7 +24,6 @@ export(plotAnnoPie)
 export(plotAnnoPie.csAnno)
 export(plotAvgProf)
 export(plotAvgProf2)
-export(plotChrCov)
 export(plotDistToTSS)
 export(readPeakFile)
 export(seq2gene)
@@ -104,7 +104,6 @@ importFrom(methods,show)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(plotrix,floating.pie)
-importFrom(plyr,.)
 importFrom(plyr,ldply)
 importFrom(rtracklayer,import.chain)
 importFrom(rtracklayer,liftOver)
